# opencv-rueppelli-2

./: CMakeLists.txt  Opencv-VS.sln  README.md  main.cpp
.circleci/: config.yml
Computer_Vision/: CMakeLists.txt  main.cpp  sqlite_functions.cpp
Computer_Vision/files/: CMakeLists.txt  blur.cpp  blur.h  detect_circle.cpp  detect_circle.h  initial.cpp  initial.h  opencv-2.db  sqlite_functions.cpp  sqlite_functions.h
Computer_Vision/gtest/: CMakeLists.txt  unit_test.cpp
Opencv-VS/: Opencv-VS.vcxproj  Opencv-VS.vcxproj.filters  main.cpp
Opencv-VS/docs/: developer_docs.md  functions.md
Opencv-VS/files/: opencv-2.db
Opencv-VS/gtest/: unit_test.cpp
Opencv-VS/src/: detect_circle.cpp  detect_circle.h  histogram.cpp  img_detection.cpp  img_detection.h  img_filtering.cpp  img_filtering.h  img_histogram.cpp  img_histogram.h  remove_background.cpp  remove_background.h  sqlite_functions.cpp  sqlite_functions.h
docs/: developer_docs.md
files/: opencv-2.db
gtest/: CMakeLists.txt  unit_test.cpp
img/: Thumbs.db
src/: CMakeLists.txt  blur_trackbar.cpp  blur_trackbar.h  detect_circle.cpp  detect_circle.h  edge_detection.cpp  edge_detection.h  histogram.cpp  histogram.h  remove_background.cpp  remove_background.h  sort_functions.cpp  sort_functions.h  sqlite_functions.cpp  sqlite_functions.h
